--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Car Racing Game</title>
+	<title> Marilyn's Car Racing Game</title>
 	<link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Fredoka+One&display=swap" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css?family=Russo+One&display=swap" rel="stylesheet">
 </head>
 <!-- Please Share as you can -->
 <body>
-	<div class="CarGame">
+	<div class="marilyn'sCarGame">
 		<div class="Score"></div>
 			<div class="StartScreen">
-				<p>Press Here To Start <br>
-				Arrow Keys To Move <br>
+				<p>start here trash can<br>
+				 use Arrow Keys To Move <br>
 			  If You Hit Another Car You Will Lose!</p>
 			</div>
 		
@@ -71,7 +71,7 @@
         function Endgame(){
         	player.start=false;
         	startscreen.classList.remove('hide'); 
-            startscreen.innerHTML="Game Over <br> Your Final Score is :"+(player.score+1)+"<br>Press Here To Restart The Game";
+            startscreen.innerHTML="YOUR A LOSER <br> Your Final Score is :"+(player.score+1)+"<br>start here chicken";
         }
          function Moveenemycars(car){ //closure consept child function access parent function parameter
         	let enemy =document.querySelectorAll('.enemycar');
