--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <!-- Please Share as you can -->
 <body>
-	<div class="marilyn'sCarGame">
+	<div class="marilyn's CarGame">
 		<div class="Score"></div>
 			<div class="StartScreen">
-				<p>start here trash can<br>
+				<p>start<em> here <em>trash can<br>
 				 use Arrow Keys To Move <br>
 			  If You Hit Another Car You Will Lose!</p>
 			</div>
