--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         function Endgame(){
         	player.start=false;
         	startscreen.classList.remove('hide'); 
-            startscreen.innerHTML="YOUR A LOSER <br> Your Final Score is :"+(player.score+1)+"<br>start here chicken";
+            startscreen.innerHTML="you can't fuck with me <br> end score is:"+(player.score+1)+"<br>start here, nut remember you can't fuck with me";
         }
          function Moveenemycars(car){ //closure consept child function access parent function parameter
         	let enemy =document.querySelectorAll('.enemycar');
