--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<div class="marilyn's CarGame">
 		<div class="Score"></div>
 			<div class="StartScreen">
-				<p>start<em> here <em>trash can<br>
-				 use Arrow Keys To Move <br>
+				<p>start<em> here <em>connerbr>bryton
+				elliott  use Arrow Keys To Move <br>
 			  If You Hit Another Car You Will Lose!</p>
 			</div>
 		
@@ -71,7 +71,7 @@
         function Endgame(){
         	player.start=false;
         	startscreen.classList.remove('hide'); 
-            startscreen.innerHTML="you can't fuck with me <br> end score is:"+(player.score+1)+"<br>start here, nut remember you can't fuck with me";
+            startscreen.innerHTML="CONNER BRYTON <br> end score is:"+(player.score+1)+"<br>ELLIOTT--START HERE";
         }
          function Moveenemycars(car){ //closure consept child function access parent function parameter
         	let enemy =document.querySelectorAll('.enemycar');
